# svlang

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: AddSVlang.cmake
include/Basic/: CharInfo.h  TokenKinds.h
include/Lex/: Lexer.h  Preprocessor.h  Token.h
include/Syntax/: MacroInfo.h  SyntaxIdentifierInfo.h  SyntaxIdentifierTable.h  TokenKinds.def
lib/: CMakeLists.txt
lib/Basic/: CMakeLists.txt  TokenKinds.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp  PPCompilerDirectives.cpp  Preprocessor.cpp
lib/Syntax/: CMakeLists.txt  SyntaxIdentifierTable.cpp
tests/: CMakeLists.txt
tests/Lex/: CMakeLists.txt  LexerTest.cpp
tools/driver/: CMakeLists.txt  driver.cpp
